package Logger.enums;

public enum LogLevel {
    DEBUG,
    INFO,
    WARN,
    ERROR,
    FATAL
}
